# learning-ml

./: .gitignore  Makefile  Readme.md  pyproject.toml
classification/Logistic Regression/: logistic_regression.ipynb
classification/k-nearest-neigbhors/: k_neares_neighbors.ipynb
data-processing/: data_preprocessing_template.ipynb
polynomial-linear-regression/: polynomial_linear_regression.ipynb
regressions/decision-tree-regression/: decision_tree_regression.ipynb
regressions/model-selection/: decision_tree_regression.ipynb  multiple_linear_regression.ipynb  polynomial_regression.ipynb  random_forest_regression.ipynb
regressions/multiple-linear-regression/: multiple_linear_regression.ipynb
regressions/random-forest-regression/: random_forest_regression.ipynb
regressions/support-vector-regression/: support_vector_regression.ipynb
simple-linear-regression/: simple_linear_regression.ipynb
support-vector-regression/: support_vector_regression.ipynb
