[tool.black]
line-length = 119
target-version = ['py39']
include = '\.py?$'
extend-exclude = '''
/(
  | blib2to3
  | tests/data
  | profiling
  | migrations
)/
'''

[tool.poetry]
name = "learning-ml"
version = "0.1.0"
description = "A pet project for ML learning"
authors = ["Yigit Yesilpinar <yigityesilpinar@gmail.com>"]
readme = "README.md"
packages = [{ include = "python_rest_api" }]

[tool.poetry.dependencies]
python = "^3.11"
gunicorn = "^20.1.0"
requests = "^2.28.2"
mypy = "^0.991"
numpy = "^1.24.2"
pandas = "^1.5.3"
matplotlib = "^3.7.0"
scikit-learn = "^1.2.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.1"
mypy = "^0.991"
types-requests = "^2.28.11.8"
responses = "^0.22.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
